# git-ticket-reference-test

./: .env.example  .gitignore  .pdm-python  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  init.sh  pyproject.toml
scripts/: commit_msg_validate.py  prepare_commit_message.py  prepare_commit_msg.py  push_with_tag.sh  ticket_utils.py  validate_commit_message.py
src/git_ticket_hooks/: prepare_commit_message.py  ticket_utils.py  validate_commit_message.py
