[project]
name = "git-ticket-reference-test"
version = "1.20.0"
description = "Pre-commit hook om automatisch ticketreferenties toe te voegen aan Git commit-berichten."
authors = [
    {name = "Collin Aldaibis", email = "caldabis@gmail.com"},
]
dependencies = [
    "python-dotenv",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
prepare-commit-msg-ticket = "git_ticket_hooks.prepare_commit_message:main"

[tool.pdm]
distribution = false
